--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,9 @@ dependencies:
   cupertino_icons: ^0.1.2
   qrcode_reader: ^0.4.4
   sqflite: ^1.1.5
-  path_provider: ^0.5.0+1
+  path_provider: 
   url_launcher: ^5.0.2
-  flutter_map: ^0.5.0+1
+  flutter_map: ^0.7.3
 
 dev_dependencies:
   flutter_test:
