--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  qrcode_reader: ^0.4.4
+  # qrcode_reader: ^0.4.4 # viejo plugin, pero daba problemas con la nuevas versiones de flutter
+  qrscan: ^0.2.17
   sqflite: ^1.1.5
   path_provider: 
   url_launcher: ^5.0.2
