--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,9 @@ dependencies:
   # qrcode_reader: ^0.4.4 # viejo plugin, pero daba problemas con la nuevas versiones de flutter
   barcode_scan: ^1.0.0
   sqflite: ^1.1.5
-  path_provider: 
+  path_provider: ^1.6.7
   url_launcher: ^5.0.2
-  flutter_map: ^0.7.3
+  flutter_map: ^0.9.0
 
 dev_dependencies:
   flutter_test:
